// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/presenters/DismissButtonPresenter renders with all props 1`] = `
.emotion-1 {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

<div
  className="emotion-1"
>
  <button
    className="hig__icon-button hig__icon-button--transparent"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="HELLO"
  >
    <svg
      className="emotion-0 hig__icon-button__icon"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
      />
    </svg>
  </button>
</div>
`;

exports[`notifications-flyout/presenters/DismissButtonPresenter renders without props 1`] = `
.emotion-1 {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

<div
  className="emotion-1"
>
  <button
    className="hig__icon-button hig__icon-button--transparent"
    onBlur={undefined}
    onClick={undefined}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Dismiss featured notification"
  >
    <svg
      className="emotion-0 hig__icon-button__icon"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
      />
    </svg>
  </button>
</div>
`;
